--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-test
+<!DOCTYPE html>
+<html>
+<head lang="jp">
+  <meta charset="UTF-8">
+  <title>Body background example</title>
+
+</head>
+<body >
+    test
+</body>
+
+
+</html>
